[package]
name = "async-cli"
version = "0.1.0"
authors = ["Steve Myers <steve@notmandatory.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
rustyline = "6.1.0"
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }