[package]
name = "async-cli"
version = "0.1.0"
authors = ["Steve Myers <steve@notmandatory.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rustyline = "6.1.0"
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7.3"
once_cell = "1.3.1"