[package]
name = "async-cli"
version = "0.1.0"
authors = ["Steve Myers <steve@notmandatory.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossbeam = "0.7"
env_logger = "0.7"
log = "0.4"
once_cell = "1.3"
rustyline = "6.1"
tokio = { version = "0.2", features = ["full"] }